# observer-eye

./: .dockerignore  .env.example  .env.prod.example  DOCKER_README.md  README.md  dev-setup.sh  docker-compose.health.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  plan.md  start-backend.sh  start-frontend.sh  start-middleware.sh  start.sh  stop.sh
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  test_setup.py
backend/infra/infra/: settings.py  urls.py
backend/infra/observemaps/: apps.py
backend/infra/pillars/: apps.py
backend/infra/queryapps/: apps.py
backend/infra/securemetrics/: apps.py
backend/infra/sysmetrics/: apps.py
backend/infra/trafficmetrics/: apps.py
backend/infra/trailgrailapps/: apps.py
backend/observer/: db.sqlite3
backend/observer/analytics/: admin.py  analytics_engine.py  models.py  urls.py  views.py
backend/observer/analytics_performance_monitoring/: admin.py  models.py  urls.py  views.py
backend/observer/application_performance_monitoring/: models.py  urls.py  views.py
backend/observer/appmetrics/: models.py  urls.py  views.py
backend/observer/core/: admin.py  apps.py  urls.py  (+12 more)
backend/scripts/: validate_production.py
backend/venv1/: pyvenv.cfg
middleware/: .dockerignore  Dockerfile  Dockerfile.dev  PROPERTY_TEST_DEEP_SYSTEM_CORRELATION_SUMMARY.md  PROPERTY_TEST_SUMMARY.md  README.md  TASK_8_IMPLEMENTATION.md  docker-compose.test.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_property_tests.py  test_bi_analytics.py  test_container.py  test_error_handling.py  test_four_pillars.py  test_integration.py  test_main.py  test_performance.py  test_property_deep_system_correlation.py  test_property_realtime_dashboard.py  test_property_realtime_processing_performance.py  test_setup.py
middleware/analytics/: README.md  __init__.py  analytics_engine.py  data_warehouse.py  kpi_calculator.py  ml_pipeline.py  models.py  report_generator.py  trend_analyzer.py
middleware/caching/: __init__.py  cache_manager.py  cache_middleware.py  invalidation.py  memory_cache.py  redis_cache.py
middleware/crud/: __init__.py  audit.py  exceptions.py  handlers.py  models.py
middleware/data_ingestion/: __init__.py  real_data_pipeline.py
middleware/data_processing/: __init__.py  filters.py  pipeline.py  sanitization.py  transformation.py  validation.py
middleware/django_integration/: __init__.py  api_client.py  connection.py  error_handler.py  models.py  orm_adapter.py
middleware/error_handling/: __init__.py  circuit_breaker.py  exceptions.py  middleware.py
middleware/performance/: __init__.py  analyzer.py  metrics.py  monitor.py
middleware/processors/: __init__.py  base_processor.py  correlation_engine.py  deep_system_integration.py  events_processor.py  logs_processor.py  metrics_processor.py  traces_processor.py
middleware/scripts/: validate_production.py
middleware/streaming/: __init__.py  backpressure.py  stream_handler.py  websocket_manager.py
middleware/telemetry/: __init__.py  analyzer.py  collector.py  correlator.py  enricher.py  exceptions.py  models.py  processor.py
middleware/venv0/: pyvenv.cfg
(+298 files in other folders)
